--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,34 +1,32 @@
 [versions]
 androidMinSdk = "21"
-androidTargetSdk = "34"
-androidCompileSdk = "34"
+androidTargetSdk = "35"
+androidCompileSdk = "35"
 
 jvmTarget = "17"
 compose-compiler = "1.5.15"
 
-libVersion = "1.1.2"
+libVersion = "1.1.3"
 
-composeColorfulSliders = "1.2.2"
 paletteKtx = "1.0.0"
-composeVersion = "1.7.0-beta07"
-detekt = "1.23.6"
+composeVersion = "1.7.2"
+detekt = "1.23.7"
 detektCompose = "0.4.5"
 
 kotlin = "1.9.25"
-agp = "8.5.1"
+agp = "8.6.1"
 
-coroutines = "1.8.1"
+coroutines = "1.9.0"
 appCompat = "1.7.0"
-androidxCore = "1.13.1"
-androidxLifecycle = "2.8.4"
-desugaring = "2.0.4"
-composeBom = "2024.06.00"
-material3 = "1.3.0-beta05"
-ksp = "1.9.24-1.0.20"
+composeBom = "2024.09.02"
+material3 = "1.3.0"
+ksp = "1.9.25-1.0.20"
 coil = "2.7.0"
-materialKolor = "1.7.0"
 
-activityCompose = "1.9.1"
+androidxCore = "1.15.0-alpha02"
+androidxLifecycle = "2.9.0-alpha03"
+desugaring = "2.1.2"
+activityCompose = "1.10.0-alpha02"
 
 [libraries]
 androidx-material3-window-sizeclass = { module = "androidx.compose.material3:material3-window-size-class", version.ref = "material3" }
@@ -39,15 +37,10 @@ desugaring = { module = "com.android.tools:desugar_jdk_libs", version.ref = "des
 detekt-formatting = { module = "io.gitlab.arturbosch.detekt:detekt-formatting", version.ref = "detekt" }
 detekt-compose = { module = "io.nlopez.compose.rules:detekt", version.ref = "detektCompose" }
 
-materialKolor = { module = "com.materialkolor:material-kolor", version.ref = "materialKolor" }
 androidx-palette-ktx = { module = "androidx.palette:palette-ktx", version.ref = "paletteKtx" }
-androidx-ui-text = { module = "androidx.compose.ui:ui-text", version.ref = "composeVersion" }
-compose-colorful-sliders = { module = "com.github.SmartToolFactory:Compose-Colorful-Sliders", version.ref = "composeColorfulSliders" }
 coroutinesAndroid = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "coroutines" }
 appCompat = { module = "androidx.appcompat:appcompat", version.ref = "appCompat" }
 androidxCore = { module = "androidx.core:core-ktx", version.ref = "androidxCore" }
-lifecycle-viewmodel-savedstate = { module = "androidx.lifecycle:lifecycle-viewmodel-savedstate", version.ref = "androidxLifecycle" }
-viewModelKtx = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version.ref = "androidxLifecycle" }
 
 coil = { module = "io.coil-kt:coil", version.ref = "coil" }
 coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coil" }
