--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,70 +1,43 @@
 [versions]
 androidMinSdk = "21"
-androidTargetSdk = "35"
-androidCompileSdk = "35"
+androidTargetSdk = "36"
+androidCompileSdk = "36"
 
 jvmTarget = "17"
-compose-compiler = "1.5.15"
 
-libVersion = "1.2.2"
+libVersion = "1.3.0"
 
 paletteKtx = "1.0.0"
-composeVersion = "1.7.5"
-detekt = "1.23.7"
-detektCompose = "0.4.5"
+detekt = "1.23.8"
 
-kotlin = "1.9.25"
-agp = "8.7.2"
+kotlin = "2.2.0"
+agp = "8.11.0"
 
-coroutines = "1.9.0"
-appCompat = "1.7.0"
-composeBom = "2024.10.01"
-material3 = "1.3.1"
-ksp = "1.9.25-1.0.20"
+composeBom = "2025.06.01"
+material3 = "1.3.2"
 coil = "2.7.0"
 
-androidxCore = "1.15.0"
-androidxLifecycle = "2.9.0-alpha06"
-desugaring = "2.1.3"
-activityCompose = "1.10.0-alpha03"
+androidxCore = "1.16.0"
+androidxLifecycle = "2.9.1"
+desugaring = "2.1.5"
+activityCompose = "1.10.1"
 
 [libraries]
-androidx-material3-window-sizeclass = { module = "androidx.compose.material3:material3-window-size-class", version.ref = "material3" }
-androidx-material-icons-extended = { module = "androidx.compose.material:material-icons-extended", version.ref = "composeVersion" }
-androidx-material = { module = "androidx.compose.material:material", version.ref = "composeVersion" }
 androidx-material3 = { module = "androidx.compose.material3:material3", version.ref = "material3" }
 desugaring = { module = "com.android.tools:desugar_jdk_libs", version.ref = "desugaring" }
-detekt-formatting = { module = "io.gitlab.arturbosch.detekt:detekt-formatting", version.ref = "detekt" }
-detekt-compose = { module = "io.nlopez.compose.rules:detekt", version.ref = "detektCompose" }
 
 androidx-palette-ktx = { module = "androidx.palette:palette-ktx", version.ref = "paletteKtx" }
-coroutinesAndroid = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "coroutines" }
-appCompat = { module = "androidx.appcompat:appcompat", version.ref = "appCompat" }
 androidxCore = { module = "androidx.core:core-ktx", version.ref = "androidxCore" }
 
 coil = { module = "io.coil-kt:coil", version.ref = "coil" }
 coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coil" }
-compose-runtime = { group = "androidx.compose.runtime", name = "runtime" }
 compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "composeBom" }
-compose-foundation = { group = "androidx.compose.foundation", name = "foundation" }
-compose-material-iconsExtended = { group = "androidx.compose.material", name = "material-icons-extended" }
-compose-animation-core = { module = "androidx.compose.animation:animation-core", version.ref = "composeVersion" }
 compose-ui = { group = "androidx.compose.ui", name = "ui" }
 compose-ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics" }
-compose-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
-compose-ui-util = { group = "androidx.compose.ui", name = "ui-util" }
-compose-material = { group = "androidx.compose.material", name = "material" }
-compose-material3 = { group = "androidx.compose.material3", name = "material3" }
 
 kotlin-gradle = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
-ksp-gradle = { module = "com.google.devtools.ksp:com.google.devtools.ksp.gradle.plugin", version.ref = "ksp" }
 agp-gradle = { module = "com.android.tools.build:gradle", version.ref = "agp" }
 detekt-gradle = { module = "io.gitlab.arturbosch.detekt:detekt-gradle-plugin", version.ref = "detekt" }
 androidx-lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "androidxLifecycle" }
 androidx-activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activityCompose" }
-androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview" }
-
-[plugins]
-image-toolbox-library = { id = "image.toolbox.library", version = "unspecified" }
-image-toolbox-compose = { id = "image.toolbox.compose", version = "unspecified" }
-image-toolbox-maven = { id = "image.toolbox.maven", version = "unspecified" }
+compose-compiler-gradle = { module = "org.jetbrains.kotlin:compose-compiler-gradle-plugin", version.ref = "kotlin" }
