--- a/trickle/src/main/cpp/CMakeLists.txt
+++ b/trickle/src/main/cpp/CMakeLists.txt
@@ -19,6 +19,7 @@ add_library( # Sets the name of the library.
         # Provides a relative path to your source file(s).
         trickle.cpp
         # Provides a relative path to your source file(s).
+        WarpEngine.cpp
         AverageSmoothFilter.cpp
         GaussianBlurFilter.cpp
         HDRFilter.cpp
