--- a/trickle/src/main/cpp/CMakeLists.txt
+++ b/trickle/src/main/cpp/CMakeLists.txt
@@ -21,6 +21,7 @@ add_library( # Sets the name of the library.
         # Provides a relative path to your source file(s).
         WarpEngine.cpp
         BmpCompressor.cpp
+        Utils.cpp
         AverageSmoothFilter.cpp
         GaussianBlurFilter.cpp
         HDRFilter.cpp
